# Legen-waitforit

./: list_stack_deque.cpp  myFirst.sh  py.ipynb  script.ipynb  shell.ipynb
cpp/: STL_about.ipynb  boost.ipynb  note.ipynb  singleton  singleton.cpp  test  test.cpp  test2  test2.cpp
cpp/boost/: CMakeCache.txt  CMakeLists.txt  Makefile  boost_thread  boost_thread.cpp  cmake_install.cmake
cpp/singleton/: singleton.cpp  singleton2  singleton_2.cpp  singleton_safe  singleton_safe.cpp
